layout issues

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -2761,7 +2761,7 @@ textarea.comntextarea {
     /* Retina-specific stuff here */
 
     .main-wrapper-fixed{
-        width: 100%;
+        width: 90%;
     }
 
 }
